提高代码可维护性